# pypi-template

./: .dockerignore  .gitignore  Dockerfile  EXCLUDE  Makefile  README.md  build.sh  pyproject.toml  requirements.py  run.sh  setup.cfg
src/my_package/: __init__.py  cli.py  my_module.py
tests/: test_my_cli.py  test_my_package.py
