[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
authors = [
    { name = "Jason A. Regina", email = "jregina@duck.com" },
]
description = "PyPI compatible template package."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "my_package._version.__version__" }

[project.optional-dependencies]
develop = ["pytest"]

[project.urls]
Homepage = "https://github.com/jarq6c/my_package"
Documentation = "https://jarq6c.github.io/my_package"
Repository = "https://github.com/jarq6c/my_package"
"Bug Tracker" = "https://github.com/jarq6c/my_package/issues"
