[metadata]
name = my_package
version = attr: my_package._version.__version__
author = Author Name
author_email = author.name@email.com
description = My package description.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_files =
    LICENSE
url = https://github.com/my_github/my_package
project_urls =
    Documentation = https://my-github.github.io/me/my_package.html
    Source = https://github.com/my_github/my_package
    Tracker = https://github.com/my_github/my_package/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    pandas
    click
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    build
    
[options.entry_points]
console_scripts =
    my-cli = my_package.cli:run
    